<resources>
    <string name="app_name">OrderApp</string>
    <string name="place_order">Place Order</string>
    <string name="order_received">Order Received</string>
    <string name="order_processed">Order is being Processed</string>
    <string name="order_dispatched">Order has been dispatched</string>
    <string name="view_menu">View Menu</string>
    <string name="price">Price: %1$s</string>
    <string name="select_amount">Select amount:</string>
    <string name="add_to_order_button">Add to order</string>
    <string name="create_new_order">Create new Order</string>
    <string name="continue_order">Continue order</string>
    <string name="action_cart">View  order</string>
    <string name="title_activity_menu_tabbed">MenuTabbedActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="gcm_senderId">542222206441</string>
    <string name="menu_download">Downloading menu...</string>
    <string name="unit_number">Unit number</string>
    <string name="street_address">Street address</string>
    <string name="street_number">Street number</string>
    <string name="street">Street</string>
    <string name="postcode">Postcode</string>
    <string name="contact_numer">Contact number</string>
    <string name="submit_address">Submit order</string>
    <string name="suburb">Suburb</string>
    <string name="dialog_order_submit_failed_title">Failed to submit order</string>
    <string name="dialog_order_submit_failed_message">Please make sure you have a steady internet connection and try again</string>
    <string name="ok">Okay</string>
    <string name="try_again">Try again</string>
    <string name="menu_download_failed">Menu download failed</string>
</resources>
