<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.dikulous.ric.orderapp.order.AddressEntryActivity">
    <TextView
        android:id="@+id/autocomplete_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Optional: automplete address"
        android:layout_centerHorizontal="true"
        />
    <fragment
        android:id="@+id/place_autocomplete_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
        android:layout_below="@id/autocomplete_text"
        />
    <EditText
        android:id="@+id/unit_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/unit_number"
        android:inputType="number"
        android:layout_below="@id/place_autocomplete_fragment"/>
    <EditText
        android:id="@+id/street_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/street_number"
        android:inputType="number"
        android:layout_toRightOf="@id/unit_number"
        android:layout_below="@id/place_autocomplete_fragment"/>
    <EditText
        android:id="@+id/street"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/street"
        android:layout_below="@id/unit_number"/>
    <EditText
        android:id="@+id/suburb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/suburb"
        android:layout_below="@id/street"/>
    <EditText
        android:id="@+id/postcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/postcode"
        android:inputType="number"
        android:layout_below="@id/suburb"/>
    <EditText
        android:id="@+id/contact_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/contact_numer"
        android:inputType="phone"
        android:layout_below="@id/postcode"/>
    <Button
        android:id="@+id/submit_address_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/submit_address"
        android:layout_below="@id/contact_number"
        android:onClick="handleSubmitAddressButton"/>
</RelativeLayout>
