<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/collapsing_appbar"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginStart="48dp"
            app:expandedTitleMarginEnd="64dp">

            <ImageView
                android:id="@+id/food_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:fitsSystemWindows="true"
                />
            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_scrollFlags="scroll"
                app:layout_collapseMode="pin"
                >
            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/food_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/food_name"
                />
            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/description"
                android:text="@string/price"/>
            <TextView
                android:id="@+id/ingredients"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/price"
                />
            <TextView
                android:id="@+id/allergens"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ingredients"
                android:textColor="@color/warning"
                android:visibility="gone"
                />

            <Button
                android:id="@+id/customise_ingredients_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="Customise Ingredients"
                android:layout_centerVertical="true"
                android:layout_below="@id/allergens"
                android:onClick="handleCustomiseIngredientsButton"/>
            <TextView
                android:id="@+id/ingredients_excluded"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/customise_ingredients_button"
                android:visibility="gone"
                android:textStyle="bold"
                />
            <EditText
                android:id="@+id/special_request_edit_text"
                android:hint="Special request"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ingredients_excluded"/>
            <RelativeLayout
                android:id="@+id/add_to_order_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/special_request_edit_text">
                <TextView
                    android:id="@+id/select_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select_amount"
                    android:layout_centerVertical="true"
                    />
                <NumberPicker
                    android:id="@+id/number_picker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/select_amount"/>
                <Button
                    android:id="@+id/add_to_order_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/add_to_order_button"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/number_picker"
                    android:onClick="handleAddToOrderButton"
                    />
            </RelativeLayout>
        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
